--- a/resources/views/frontend/error404.html
+++ b/resources/views/frontend/error404.html
@@ -485,3 +485,183 @@
 
 </body>
 </html>
+<div id="main">
+    <div class="magazine-viewport">
+        <div class="container">
+            <div id="book"></div>
+        </div>
+    </div>
+
+    <div id="controls">
+
+        <button id="next">Next</button>
+        <button id="zoominbutton" type="button">zoom in</button>
+        <button id="zoomoutbutton" type="button">zoom out</button>
+        <label for="page-number">Page:</label> <input type="text" size="1" id="page-number"> of <span id="number-pages"></span>
+    </div>
+</div>
+
+
+<script id="my_script" type="text/javascript">
+
+    // $('#book .double').scissor();
+
+    var numberOfPages = 0;
+
+    var url = '/storage/file/{{$book->file}}';
+
+    var rendered = [];
+    var firstPagesRendered = false;
+
+
+
+    var pdf = null,
+        pageNum = 1,
+        scale = 0.7;
+
+    function renderPage(num) {
+
+        pdf.getPage(num).then(function(page) {
+
+                var viewport = page.getViewport(scale);
+
+                //
+                // Prepare canvas using PDF page dimensions
+                //
+                var canvasID = 'canv' + num;
+                var canvas = document.getElementById(canvasID);
+                if (canvas == null) return;
+                var context = canvas.getContext('2d');
+                canvas.height = viewport.height;
+                canvas.width = viewport.width;
+
+                //
+                // Render PDF page into canvas context
+                //
+                var renderContext = {
+                    canvasContext: context,
+                    viewport: viewport
+                };
+                page.render(renderContext);
+
+                // Update page counters
+                document.getElementById('page-number').textContent = pageNum;
+                document.getElementById('number-pages').textContent = pdf.numPages;
+            }
+        )}
+
+
+    // Adds the pages that the book will need
+    function addPage(page, book) {
+        // 	First check if the page is already in the book
+        if (!book.turn('hasPage', page)) {
+
+
+            // Create an element for this page
+            var element = $('<div />', {'class': 'page '+((page%2==0) ? 'odd' : 'even'), 'id': 'page-'+page})
+            element.html('<div class="data"><canvas id="canv' + page + '"></canvas></div>');
+            // element.html('<div><i>test</i></div>');
+            // If not then add the page
+            book.turn('addPage', element, page);
+            // renderPage(page);
+            //*/
+        }
+    }
+
+
+
+    $(window).ready(function(){
+
+        pdfjsLib.disableWorker = true;
+
+        pdfjsLib.getDocument(url).then(function(pdfDoc) {
+
+            numberOfPages = pdfDoc.numPages;
+            pdf = pdfDoc;
+            $('#book').turn.pages = numberOfPages;
+
+
+            $('#book').turn({acceleration: false,
+                pages: numberOfPages,
+                elevation: 50,
+                gradients: !$.isTouch,
+                // display: 'single',
+                when: {
+                    turning: function(e, page, view) {
+
+                        // Gets the range of pages that the book needs right now
+                        var range = $(this).turn('range', page);
+
+                        // Check if each page is within the book
+                        for (page = range[0]; page<=range[1]; page++) {
+                            addPage(page, $(this));
+                        };
+
+                    },
+
+                    turned: function(e, page) {
+                        $('#page-number').val(page);
+
+                        if (firstPagesRendered) {
+                            var range = $(this).turn('range', page);
+                            for (page = range[0]; page<=range[1]; page++) {
+                                if (!rendered[page]) {
+                                    renderPage(page);
+                                    rendered[page] = true;
+                                }
+                            };
+                        }
+
+                    }
+                }
+            });
+            $('#book').click(function(e) {
+                var pos = {
+                    x: e.pageX - $(this).offset().left,
+                    y: e.pageY - $(this).offset().top
+                };
+                console.log(pos);
+                $('#book').zoom('zoomIn', pos);
+            });
+
+            $('#number-pages').html(numberOfPages);
+
+            $('#page-number').keydown(function(e){
+
+                var p = $('#page-number').val();
+                if (e.keyCode==13) {
+                    $('#book').turn('page', p);
+                    renderPage(p);
+                }
+
+            });
+
+            var n = numberOfPages;
+            if (n > 6 ) n = 6;
+
+            for (page = 1; page <= n; page++) {
+                renderPage(page);
+                rendered[page] = true;
+            };
+            firstPagesRendered = true;
+
+
+        });
+
+
+    });
+
+    $(window).bind('keydown', function(e){
+
+        if (e.target && e.target.tagName.toLowerCase()!='input')
+            if (e.keyCode==37)
+                $('#book').turn('previous');
+            else if (e.keyCode==39)
+                $('#book').turn('next');
+
+    });
+
+</script>
+</body>
+
+</html>
